# fin-private-site

./: .gitignore  README.md  package.json
server-py/stockApp/: localvenv.sh  pyproject.toml
server-py/stockApp/dataSource/: mongoClient.py  mongo_test.py  seleniumWebDriver.py
server-py/stockApp/resources/opendart/2015_4Q_PL_20230503040205/: 2015_사업보고서_02_손익계산서_20230503.txt  2015_사업보고서_02_손익계산서_연결_20230503.txt
server-py/stockApp/resources/opendart/2016_1Q_PL_20230119040600/: 2016_1분기보고서_02_손익계산서_20230119.txt  2016_1분기보고서_02_손익계산서_연결_20230119.txt
server-py/stockApp/resources/opendart/2016_2Q_PL_20230119041014/: 2016_반기보고서_02_손익계산서_20230119.txt  2016_반기보고서_02_손익계산서_연결_20230119.txt
server-py/stockApp/resources/opendart/2016_3Q_PL_20230119041435/: 2016_3분기보고서_02_손익계산서_20230119.txt  2016_3분기보고서_02_손익계산서_연결_20230119.txt
server-py/stockApp/resources/opendart/2016_4Q_PL_20230321040533/: 2016_사업보고서_02_손익계산서_20230321.txt  2016_사업보고서_02_손익계산서_연결_20230321.txt
server-py/stockApp/resources/opendart/2017_1Q_PL_20230119042204/: 2017_1분기보고서_02_손익계산서_20230119.txt  2017_1분기보고서_02_손익계산서_연결_20230119.txt
server-py/stockApp/resources/opendart/2017_2Q_PL_20230301061140/: 2017_반기보고서_02_손익계산서_20230301.txt  2017_반기보고서_02_손익계산서_연결_20230301.txt
server-py/stockApp/resources/opendart/2017_3Q_PL_20230119042920/: 2017_3분기보고서_02_손익계산서_20230119.txt  2017_3분기보고서_02_손익계산서_연결_20230119.txt
server-py/stockApp/tasks/: luigiTestTask.py  luigiTestTask_test.py
server-py/stockApp/tasks/common/: MongoTestTask.py
server-py/stockApp/tasks/targets/: MongoFindTarget.py
(+268 files in other folders)
